--- a/style.css
+++ b/style.css
@@ -111,17 +111,34 @@ margin: 10px auto;
 .card1{
     border: 1px solid red;
     width:280px;
-    height: 300px;
+    height: 200px;
     background-color: rgb(241, 187, 121);
     color:black ;
     padding: 15px;
     border-radius: 10px;
 }
+#card-p{
+    font-size: 14px;
+    color: rgb(252, 252, 252);
+    margin-top: px;
+    padding: px;
+}
+
+#para-p{
+    font-size: 14px;
+    color: rgb(251, 251, 251);
+}
+#para-p1{
+    font-size: 14px;
+    color: rgb(255, 250, 250);
+}
+
+
 .card2{
     border: 1px solid red;
     
     width:280px;
-    height: 300px;
+    height: 200px;
     background-color: rgb(90, 236, 126);
     padding: 15px;
     border-radius: 10px;
@@ -129,7 +146,7 @@ margin: 10px auto;
 .card3{
     border: 1px solid red;
     width:280px;
-    height: 300px;
+    height: 200px;
     background-color: rgba(4, 66, 104, 0.373);
     padding: 15px;
     border-radius: 10px;
